# bambuddy

./: .env.example  .gitignore  .pre-commit-config.yaml  BETA_TEST_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Dockerfile.test  README.md  RELEASE_NOTES_0.1.6.md  SECURITY.md  docker-compose.mysql.yml  docker-compose.test.yml  docker-compose.yml  docker-publish-beta.sh  docker-publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_all.sh  test_backend.sh  test_docker.sh  test_frontend.sh  update_website_wiki.sh  whats_new.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  security.yml  stale.yml
.python-bin/: python
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_virtual_printers_and_spool_core_weight_catalog_id.py
backend/app/: main.py
backend/tests/: conftest.py
deploy/: bambuddy.service
docs/: ams_slot_printer_matrix.txt  bambu_lab_preset_sync_api.md
frontend/: .npmrc  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  index.css
install/: README.md  docker-install.sh  install.sh  start_bambuddy.bat  update.sh
plans/: 3mf-plate-management-verification.md  3mf-plate-management.md
scripts/: debug_preset.py  update_archive_date.py
static/: index.html
static/assets/: index-1a-urQlt.js  index-7nHE42SH.js  index-B5u_lQK-.js  index-B7d6gcUW.css  index-B9U7ouPO.js  index-BJQC4Kk-.js  index-BK0uiRXP.js  index-BKt5CsSQ.js  index-BLdylhup.js  index-BPFlIKJb.css  index-BQIOMqJ9.css  index-BTpjfCpx.css  index-BdU-188w.js  index-BjxxB0_d.css  index-BqcFmQ1s.js  index-BwLAOG3i.js  index-Bwf4poPr.css  index-BwfbnBQ9.css  index-Bye0cNCS.js  index-C1mIxrzF.css  index-C2qF9pCa.js  index-CBPKqOAD.js  index-CB_jd89Z.css  index-CCWSzj3L.js  index-CDlz__Os.js  index-CK9fZPad.css  index-CKmo1TxA.js  index-COZJGA_d.css  index-CR7xbPFt.js  index-CUSzovgk.js  index-CVDQtTMh.css  index-CZD79C6y.js  index-Ca04bhbd.css  index-CaUem_u2.js  index-CcC-KyfM.css  index-CggumZ2v.css  index-ClrkCtKg.js  index-CmQlhkzV.js  index-CosC5iN4.css  index-Crbfjp9b.css  (+37 more)
(+334 files in other folders)
